<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OPS</string>
    <string name="mobile_number">Mobile Number</string>

    <!--General Strings-->
    <string name="progress_loading">Loading…</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="empty" />
    <string name="error_no_net">No internet access. Please check your connection and try again.</string>
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="error_entry">Entry Invalid</string>
    <string name="empty_entry">Field cannot be empty</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="mobile_number_tag">: \n</string>
    <string name="error_number">Enter vaild phone number</string>

    <!--Bottom menu-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_events">Events</string>
    <string name="menu_social">Social</string>
    <string name="menu_ops">O.P.S</string>

    <!--Dashboard-->
    <string name="ops_fullname">O. Panneerselvam</string>
    <string name="select_language">Select Language</string>
    <string name="select_english">English</string>
    <string name="select_tamil">தமிழ்</string>
    <string name="confirm">Confirm</string>

    <!--Notification-->
    <string name="notification_title">Notification</string>
    <string name="notification_nothing">Nothing here!!!</string>
    <string name="notification_check_after">Check for the notification after \nsometime</string>

    <!--Notification-->
    <string name="all_images_title">Images</string>

    <!--Profile-->
    <string name="txt_name">Name*</string>
    <string name="txt_ph">Phone Number*</string>
    <string name="txt_mail">Email Id*</string>
    <string name="txt_gen">Gender</string>
    <string name="txt_gen_m">Male</string>
    <string name="txt_gen_ot">Other</string>
    <string name="txt_gen_f">Female</string>
    <string name="save">Save</string>
    <string name="txt_dob">Date of Birth</string>

    <!--Search-->
    <string name="search_title">Search</string>

    <!--Image detail-->
    <string name="image_detail">Image Detail</string>

    <!--Video detail-->
    <string name="video_detail">Video Detail</string>
    <string name="live_event_video_view">Live Event</string>

    <string name="prof_title">Profile Update</string>
    <string name="news_feed_description">Title Description</string>
    <string name="live_event">Event</string>
    <string name="welcome">Welcome</string>

    <!--Social Media-->
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="sharechat">ShareChat</string>
    <string name="dailyhunt">DailyHunt</string>
    <string name="youtube">YouTube</string>


    <!--About OPS-->
    <string name="about_ops">About O.P.S</string>
    <string name="txt_designation">Deputy Chief Minister of Tamil Nadu</string>
    <string name="personal">Personal</string>
    <string name="txt_content">Content Description</string>
    <string name="political">Political Career</string>

    <string name="txt_party">About</string>
    <string name="achieve">Achievements</string>
    <string name="partyName">All India Anna Dravidar Munnetra Kazhagam</string>

    <string name="st_assembly">Legislative Assembly Election</string>
    <string name="yr">Election Year</string>
    <string name="ldr">Party Leader</string>
    <string name="won">Seats Won</string>
    <string name="nt_assembly">Indian General Election</string>

    <!--Login-->
    <string name="log">Login</string>
    <string name="log_welcome">Welcome to O.Panneerselvam App</string>
    <string name="log_num">+91 | Enter Your Mobile Number</string>
    <string name="login">Login</string>

    <!--OTP Verification-->
    <string name="otp">Mobile Verification</string>
    <string name="verify_title">Verify Phone Number</string>
    <string name="verify_content">Please enter the 4 digit SMS \n verification number we sent to \n your mobile phone</string>
    <string name="resend">Didn\'t Recieve OTP ?</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="re_Send">Resend Code</string>
    <string name="verify">Verify Now</string>


    <string name="user_pg_title">User Profile</string>
    <string name="user_name">UserName</string>
    <string name="set_title_1">Edit Profile</string>
    <string name="set_title_2">Change Language</string>
    <string name="set_title_3">Notification</string>
    <string name="set_title_4">Share this app</string>
    <string name="set_title_5">Rate this app</string>
    <string name="logOut">Logout</string>
    <string name="title" />

</resources>