<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.OTPActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            android:background="@drawable/graadient_background"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_back"
            android:layout_centerInParent="true"
            android:fontFamily="@font/medium"
            android:text="@string/otp"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:fontFamily="@font/semi_bold"
            android:text="@string/verify_title"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="80dp"
            android:gravity="center"
            android:fontFamily="@font/semi_bold"
            android:text="@string/verify_content"
            android:textColor="@color/text_grey"
            android:textSize="14sp" />

        <com.hst.ops.customview.CustomOtpEditText
            android:id="@+id/otp_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="number"
            android:textColor="@color/black"
            app:otp="" />

        <TextView
            android:id="@+id/tvCountdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/contResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/resend"
                android:textColor="@color/otp_cont"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/contResend"
                android:fontFamily="@font/semi_bold"
                android:text="@string/re_Send"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/semi_bold"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>