<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BiographyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/personal"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/cont_personal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/txt_content"
            android:textColor="@color/text_grey"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/political"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/cont_political"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:fontFamily="@font/regular"
            android:text="@string/txt_content"
            android:textColor="@color/text_grey"
            android:textSize="12sp"/>

    </LinearLayout>

</ScrollView>