<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="?android:attr/actionBarSize"/>

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_left_arrow_1_" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/img_back"
                android:layout_centerInParent="true"
                android:text="@string/log"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"
                android:src="@drawable/img_logo"
                android:background="@drawable/round_logo_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:fontFamily="@font/semi_bold"
                android:text="@string/log_welcome"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:minLines="2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtBox"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                app:boxStrokeColor="@color/otp_box_stroke">

                <EditText
                    android:id="@+id/edtMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:hint="@string/log_num"
                    android:inputType="number"
                    android:maxLength="13"
                    android:textColorHint="@color/text_grey"
                    android:textColor="@color/text_grey"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/semi_bold"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>