<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_back"
            android:padding="20dp"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notification_title"
            android:textSize="20sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/img_back"
            android:gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_no_new_notification"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_nothing"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:fontFamily="@font/semi_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_check_after"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:gravity="center"
            android:fontFamily="@font/regular"/>

    </LinearLayout>

</RelativeLayout>