<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_back"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prof_title"
                android:textSize="20sp"
                android:fontFamily="@font/medium"
                android:textColor="@color/white"
                android:layout_toEndOf="@id/img_back"
                android:gravity="center"/>

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollPro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/save"
            android:layout_below="@id/tool"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.hst.ops.customview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_default_profile" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/in_lay_1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:hint="@string/txt_name"
                    app:boxStrokeColor="@color/lay_outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/prof_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:inputType="text"
                        android:textColor="@color/profile_txt"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/in_lay_2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_ph"
                    app:boxStrokeColor="@color/lay_outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/prof_ph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:inputType="number"
                        android:maxLength="13"
                        android:textColor="@color/profile_txt"
                        android:textColorHint="@color/profile_txt"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/in_lay_3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_mail"
                    app:boxStrokeColor="@color/lay_outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/prof_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:inputType="text"
                        android:textColor="@color/profile_txt"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/in_lay_4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_dob"
                    app:boxStrokeColor="@color/lay_outline">

                    <EditText
                        android:id="@+id/prof_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_calender"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:fontFamily="@font/regular"
                        android:inputType="text"
                        android:textColor="@color/profile_txt"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/txt_gen"
                    android:textColor="@color/profile_txt"
                    android:textSize="17sp" />

                <RadioGroup
                    android:id="@+id/prof_gen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/txt_gen_m"
                        android:textColor="@color/profile_txt"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/txt_gen_f"
                        android:textColor="@color/profile_txt"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/txt_gen_ot"
                        android:textColor="@color/profile_txt"
                        android:textSize="16sp" />

                </RadioGroup>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_round_app_colour"
            android:fontFamily="@font/regular"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>

    <!--    <Button-->
    <!--        android:id="@+id/save"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_marginVertical="20dp"-->
    <!--        android:layout_marginHorizontal="30dp"-->
    <!--        android:background="@drawable/button_round_app_colour"-->
    <!--        android:fontFamily="@font/regular"-->
    <!--        android:text="@string/save"-->
    <!--        android:textAllCaps="false"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="16sp" />-->