<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutPartyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_disabled"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/abt_party"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bt_enabled"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txt_party"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/achievements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/achieve"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/partyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/party"
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/medium"
                    android:gravity="center|start"
                    android:text="@string/partyName"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/viewText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/party"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/txt_content"
                    android:textColor="@color/text_grey"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/achieveLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/st_party_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/transparent_black"
                    android:dividerHeight="6dp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>